# x_digest

./: .claudeignore  .env.example  .geminiignore  .gitignore  CLAUDE.md  GEMINI.md  LICENSE  README.md  browser_cookies.json  config.py  cookies.json  custom_accounts.json.example  fetcher.py  main.py  pyproject.toml  run.sh  test_run.py  test_tweets.json
defaults/: suggested_accounts.json
docs/: configuration-guide.md
pipeline/: __init__.py  assemble.py  curate.py  insights.py  orchestrator.py  shortlinks.py  translate.py
scripts/: list_together_free_models.py  run.sh
tests/: test_feishu_manual.py  test_scraper.py
