[project]
name = "x-digest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "markdown>=3.10.2",
    "openai>=2.21.0",
    "playwright>=1.58.0",
    "playwright-stealth>=2.0.2",
    "python-dotenv>=1.2.1",
    "questionary>=2.1.1",
    "tenacity>=9.1.4",
    "tweepy>=4.16.0",
    "twikit>=2.3.3",
]
